--- a/Invitation.css
+++ b/Invitation.css
@@ -19,6 +19,20 @@
 .Home img {
     width: 50%;
 }
+.Hometext h1 {
+    font-family: "Lucida Handwriting";
+    font-size: 30px;
+}
+
+.Hometext h2 {
+    font-family: "Lucida Handwriting";
+    font-size: 28px;
+}
+
+.Hometext h3 {
+    font-family: "Lucida Handwriting";
+    font-size: 28px;
+}
 
 
 
